# XposedModuleSample

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/wind/plugin/: MainActivity.java  XposedEntry.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
